[gd_scene load_steps=8 format=2]

[ext_resource path="res://balloon3_12sheet.png" type="Texture" id=1]
[ext_resource path="res://Balloon.gd" type="Script" id=2]
[ext_resource path="res://PICO-8.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://balloon_fire.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Balloon" type="Area2D"]
monitorable = false
collision_mask = 2
script = ExtResource( 2 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/TurnRight = SubResource( 1 )

[node name="Fire" type="Sprite" parent="."]
position = Vector2( 0, 32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -24, 0 )
hframes = 6

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 10
texture = ExtResource( 1 )
hframes = 12

[node name="RectOfPower" type="ColorRect" parent="Sprite"]
visible = false
margin_left = 8.0
margin_top = 72.0
margin_right = 24.0
margin_bottom = 96.0
rect_rotation = 180.0
color = Color( 0.788235, 0.596078, 0.894118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="_DEBUG" type="Label" parent="."]
margin_left = -93.5411
margin_top = -108.176
margin_right = 146.459
margin_bottom = -12.1753
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.945098, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "state"
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_DEBUG2" type="Label" parent="."]
margin_left = -148.799
margin_top = -121.336
margin_right = 123.201
margin_bottom = -73.3358
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.572549, 0.0784314, 0.67451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "(-0.9, -0.1,-0.2)"
align = 1
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_Balloon_area_entered"]
